--- a/11_shell_de_django.ipynb
+++ b/11_shell_de_django.ipynb
@@ -27,11 +27,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Django* cuenta con una funcionalidad que permite desplegar un shell baasado en *IPython*, el cual permite interactuar con el entorno de un proyecto.\n",
+    "*Django* cuenta con una funcionalidad que permite desplegar un shell basado en *IPython*, el cual permite interactuar con el entorno de un proyecto.\n",
     "\n",
-    "De este modo, el shell de *Django* permite interactuar con los modelos definidos en dicho proyecto.\n",
+    "De este modo, el shell de *Django* permite interactuar con los elementod definidos en dicho proyecto.\n",
     "\n",
-    "Sólo es necesario ejecutar el siguiente comando desde una terminal,asegurándose de estar en el directorio del proyecto.\n",
+    "Sólo es necesario ejecutar el siguiente comando desde una terminal, asegurándose de estar en el directorio del proyecto.\n",
     "\n",
     "``` bash\n",
     "python manage.py shell\n",
@@ -51,7 +51,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "``` ipython\n",
+    "```\n",
+    "Python 3.7.3 (default, Mar 27 2019, 22:11:17)\n",
+    "Type 'copyright', 'credits' or 'license' for more information\n",
+    "IPython 7.8.0 -- An enhanced Interactive Python. Type '?' for help.\n",
+    "```\n",
+    "```ipython\n",
+    "\n",
     "In [1]: from django.http import HttpRequest, QueryDict, JsonResponse\n",
     "\n",
     "In [2]: import json\n",
@@ -60,7 +66,7 @@
     "   \n",
     "In [4]: peticion = HttpRequest()\n",
     "\n",
-    "In [5]: peticion.GET=QueryDict(query_string=\"nombre=Juan&apellido=Pérez\")\n",
+    "In [5]: peticion.GET = QueryDict(query_string=\"nombre=Juan&apellido=Pérez\")\n",
     "\n",
     "In [6]: respuesta = vista(peticion)\n",
     "\n",
@@ -84,7 +90,7 @@
     "In [12]: json.loads(str(respuesta_json.content, 'utf-8'))\n",
     "Out[12]: {'nombre': 'Juan', 'apellido': 'Pérez', 'calificaciones': [7.5, 9.2, 6, 8.3]}\n",
     "\n",
-    "In [13]:\n",
+    "In [13]: exit()\n",
     "```"
    ]
   },
