--- a/15_endpoints_de_la_api_rest.ipynb
+++ b/15_endpoints_de_la_api_rest.ipynb
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se sustituirá el archivo ```api/urls.py``` con el archivo ```src/15/ursl.py```."
+    "* A continuación se sustituirá el archivo ```tutorial/api/urls.py``` con el archivo ```src/15/ursl.py```."
    ]
   },
   {
