--- a/20_gestion_de_formularios.ipynb
+++ b/20_gestion_de_formularios.ipynb
@@ -59,10 +59,10 @@
     "\n",
     "*Django* puede crear y gestionar formularios mediante los siguientes elementos.\n",
     " \n",
-    "* Formularios (\"forms\").\n",
-    "* Campos (\"fields\").\n",
-    "* Widgets.\n",
-    "* Validadores."
+    "* Formularios (\"forms\"), los cuales son contendores para campos específicos.\n",
+    "* Campos (\"fields\"), los cuales corresponden a los datos que serán obtenidos de las formas.\n",
+    "* \"Widgets\", los cuales definen el tipo de elemento del front-end con el que se obtendrán los datos. \n",
+    "* Validadores, los cuales permiten realizar valdiaciones de los datos ingresados."
    ]
   },
   {
@@ -112,15 +112,6 @@
     "## Los \"widgets\" de los campos.\n",
     "\n",
     "https://docs.djangoproject.com/en/2.2/ref/forms/widgets/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from django.forms import Widget"
    ]
   },
   {
@@ -190,7 +181,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Definición de la ruta para la forma."
+    "### El script ```src/20/urls.py```.\n",
+    "\n",
+    "El script ```src/20/urls.py``` liga el patrón de la ruta ```/api/alta``` con la función ```tutorial.api.endpoint_views.clave()```.\n",
+    "\n",
+    "``` python\n",
+    "from django.urls import path, re_path\n",
+    "from . import views, endpoint_views, template_views\n",
+    "\n",
+    "urlpatterns = [path('', views.vista),\n",
+    "               path('carga', views.carga),\n",
+    "               re_path(r'^(?P<clave>[0-9]{4}$)', endpoint_views.clave),\n",
+    "               path('vista/', template_views.vista),\n",
+    "               path('valida/', template_views.valida),\n",
+    "               path('alta/', template_views.forma),\n",
+    "         ]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Se sustiruirá al script ```tutorial/api/urls.py``` con el script ```src/20/urls.py```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para las plataformas Linux y MacOS X."
    ]
   },
   {
@@ -199,7 +219,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/20/urls.py tutorial/api/urls.py"
+    "!cp src/20/urls.py tutorial/api/urls.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma Windows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy src\\20\\urls.py tutorial\\api\\urls.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda despelgará la sustitución hecha en el script ```tutorial/api/urls.py```."
    ]
   },
   {
@@ -319,18 +362,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\".\" no se reconoce como un comando interno o externo,\n",
-      "programa o archivo por lotes ejecutable.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!./manage.py runserver 0.0.0.0:8000"
    ]
