--- a/09_objetos_request_y_response.ipynb
+++ b/09_objetos_request_y_response.ipynb
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Métodos de ´´´django.http.HttpRequest´´´.\n",
+    "### Métodos de ```django.http.HttpRequest```.\n",
     "\n",
     "#### Métodos informativos.\n",
     "\n",
@@ -142,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Detalles sobre la clase *django.http.HttpResponse*.\n",
+    "## Detalles sobre la clase ```django.http.HttpResponse```.\n",
     "\n",
     "``` python\n",
     "django.http.HttpResponse(content='', content_type=None, status=200, reason=None, charset=None)\n",
