--- a/19_contenido_estatico.ipynb
+++ b/19_contenido_estatico.ipynb
@@ -238,9 +238,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        1 archivo(s) copiado(s).\n"
+     ]
+    }
+   ],
    "source": [
     "!copy src\\19\\settings.py tutorial\\tutorial\\settings.py"
    ]
@@ -263,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,18 +287,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['django.contrib.admin',\n",
+       " 'django.contrib.auth',\n",
+       " 'django.contrib.contenttypes',\n",
+       " 'django.contrib.sessions',\n",
+       " 'django.contrib.messages',\n",
+       " 'django.contrib.staticfiles',\n",
+       " 'api',\n",
+       " 'main']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.INSTALLED_APPS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/static/'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.STATIC_URL"
    ]
@@ -320,40 +357,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\josech\\\\Dropbox\\\\Documentos\\\\py201\\\\tutorial/static/'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "settings.STATIC_ROOT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\josech\\Dropbox\\Documentos\\py201\\tutorial\n"
+     ]
+    }
+   ],
    "source": [
     "%cd tutorial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "13 static files copied to 'C:\\Users\\josech\\Dropbox\\Documentos\\py201\\tutorial\\static', 119 unmodified.\n"
+     ]
+    }
+   ],
    "source": [
     "!python manage.py collectstatic --noinput"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\josech\\Dropbox\\Documentos\\py201\n"
+     ]
+    }
+   ],
    "source": [
-    "%ls /opt/pythonista/py231/tutorial/static/"
+    "%cd .."
    ]
   },
   {
@@ -473,11 +546,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "src\\19\\css\\bootstrap-grid.css\n",
+      "src\\19\\css\\bootstrap-grid.css.map\n",
+      "src\\19\\css\\bootstrap-grid.min.css\n",
+      "src\\19\\css\\bootstrap-grid.min.css.map\n",
+      "src\\19\\css\\bootstrap-reboot.css\n",
+      "src\\19\\css\\bootstrap-reboot.css.map\n",
+      "src\\19\\css\\bootstrap-reboot.min.css\n",
+      "src\\19\\css\\bootstrap-reboot.min.css.map\n",
+      "src\\19\\css\\bootstrap.css\n",
+      "src\\19\\css\\bootstrap.css.map\n",
+      "src\\19\\css\\bootstrap.min.css\n",
+      "src\\19\\css\\bootstrap.min.css.map\n",
+      "       12 archivo(s) copiado(s).\n"
+     ]
+    }
+   ],
    "source": [
     "!copy src\\19\\css tutorial\\api\\static\\"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "src\\19\\js\\bootstrap.bundle.js\n",
+      "src\\19\\js\\bootstrap.bundle.js.map\n",
+      "src\\19\\js\\bootstrap.bundle.min.js\n",
+      "src\\19\\js\\bootstrap.bundle.min.js.map\n",
+      "src\\19\\js\\bootstrap.js\n",
+      "src\\19\\js\\bootstrap.js.map\n",
+      "src\\19\\js\\bootstrap.min.js\n",
+      "src\\19\\js\\bootstrap.min.js.map\n",
+      "        8 archivo(s) copiado(s).\n"
+     ]
+    }
+   ],
+   "source": [
+    "!copy src\\19\\js tutorial\\api\\static\\"
    ]
   },
   {
@@ -493,20 +611,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\"cp\" no se reconoce como un comando interno o externo,\n",
+      "programa o archivo por lotes ejecutable.\n"
+     ]
+    }
+   ],
    "source": [
     "!cp -r src/19/imagenes tutorial/api/static/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "src\\19\\imagenes\\pythonista.png\n",
+      "        0 archivo(s) copiado(s).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "El sistema no puede encontrar la ruta especificada.\n"
+     ]
+    }
+   ],
    "source": [
-    "!dir tutorial/api/static/imagenes"
+    "!copy src\\19\\imagenes\\* tutorial\\api\\static\\imagenes\\"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " El volumen de la unidad C no tiene etiqueta.\n",
+      " El n£mero de serie del volumen es: 3C5C-8CEE\n",
+      "\n",
+      " Directorio de C:\\Users\\josech\\Dropbox\\Documentos\\py201\\tutorial\\api\\static\\imagenes\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No se encuentra el archivo\n"
+     ]
+    }
+   ],
+   "source": [
+    "!dir tutorial\\api\\static\\imagenes\\"
    ]
   },
   {
@@ -569,11 +740,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        1 archivo(s) copiado(s).\n"
+     ]
+    }
+   ],
    "source": [
-    "!copy ..\\src\\19\\base.html ..\\tutorial\\templates\\"
+    "!copy src\\19\\base.html tutorial\\templates\\"
    ]
   },
   {
@@ -584,7 +763,7 @@
    },
    "outputs": [],
    "source": [
-    "%pycat ../tutorial/templates/base.html"
+    "%pycat tutorial/templates/base.html"
    ]
   },
   {
@@ -629,9 +808,9 @@
    "source": [
     "Ahora las plantillas correspondientes a las URLs siguientes despelgarán los cambios. \n",
     "\n",
-    "http://localhost:5000/api/vista/\n",
+    "http://localhost:8000/api/vista/\n",
     "\n",
-    "http://localhost:5000/api/valida/"
+    "http://localhost:8000/api/valida/"
    ]
   },
   {
